fix: Fix overflow for IPhones

--- a/src/root.css
+++ b/src/root.css
@@ -23,6 +23,7 @@ body, html, #root {
 #root {
     color: #ffffff;
     overflow: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 #root canvas {
